# openstack-cli

./: Dockerfile  README.md  pyproject.toml
.github/workflow/: deploy-on-dockerhub.yaml
.github/workflows/: deploy-on-dockerhub.yaml
