[tool.poetry]
name = "openstack-cli-bundle"
version = "1.0.0"
description = ""
authors = ["Jean-Yves NOLEN <jynolen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-barbicanclient = "^5.4.0"
python-ceilometerclient = "^2.9.0"
python-cinderclient = "^9.2.0"
python-cloudkittyclient = "^4.6.0"
python-designateclient = "^5.1.0"
python-fuelclient = "^11.0.0"
python-glanceclient = "^4.2.0"
gnocchiclient = "^7.0.7"
python-heatclient = "^3.1.0"
python-magnumclient = "^4.0.0"
python-manilaclient = "^4.2.0"
python-mistralclient = "^4.5.0"
python-monascaclient = "^2.6.0"
python-muranoclient = "^2.5.0"
python-neutronclient = "^8.2.1"
python-novaclient = "^18.2.0"
python-saharaclient = "^4.0.2"
python-senlinclient = "^2.5.0"
python-swiftclient = "^4.1.0"
python-troveclient = "^8.0.0"
python-openstackclient = "^6.0.0"
python-keystoneclient = "^5.0.1"
python-ironicclient = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
